@@ -119,7 +119,7 @@
   . Implement request #67106 (Split main fpm config). (Elan Ruusamäe, Remi)
 
 - FTP:
-  . Fixed bug #69082 FTPS support on Windows
+  . Fixed bug #69082 (FTPS support on Windows). (Anatol) 
 
 - Intl:
   . Removed deprecated aliases datefmt_set_timezone_id() and
@@ -223,6 +223,7 @@
     (Daniel Lowrey)
   . Added preg_replace_callback_array function. (Wei Dai)
   . Deprecated salt option to password_hash. (Anthony) 
+  . Added Windows support for getrusage(). (Kalle)
 
 - Streams:
   . Fixed bug #68532 (convert.base64-encode omits padding bytes).
